--- a/Python_Functions_Exercises.ipynb
+++ b/Python_Functions_Exercises.ipynb
@@ -62,9 +62,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91108331",
+   "metadata": {},
+   "source": [
+    "Crear un funcion que revise un string de dos palabras y regrese True si las dos comienzan con la misma letra.\n",
+    "\n",
+    "diego diaz - True\n",
+    "\n",
+    "monse arenas - False\n",
+    "\n",
+    "Hint:\n",
+    "\n",
+    "Comparision Operators\n",
+    "\n",
+    "Indexing\n",
+    "\n",
+    "ASCII"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e7c5150a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comparison(word1, word2):\n",
+    "    if word1[0] == word2[0]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1e8ca2ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison(\"diego\", \"diaz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2a73a3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison(\"martha\", \"sanchez\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "83ea9bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison (\"Martha\", \"Martinez\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6779b1d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison(\"Bernardo\", \"Juarez\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41fa57d2",
+   "id": "d6027e6b",
    "metadata": {},
    "outputs": [],
    "source": []
