--- a/Python_Functions_Exercises.ipynb
+++ b/Python_Functions_Exercises.ipynb
@@ -66,7 +66,7 @@
    "id": "91108331",
    "metadata": {},
    "source": [
-    "Crear un funcion que revise un string de dos palabras y regrese True si las dos comienzan con la misma letra.\n",
+    "2. Crear un funcion que revise un string de dos palabras y regrese True si las dos comienzan con la misma letra.\n",
     "\n",
     "diego diaz - True\n",
     "\n",
@@ -180,9 +180,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0b0e778",
+   "metadata": {},
+   "source": [
+    "3. Yoda style: Crea una funcion que reciba una frase (' yo tengo hambre') y la returne alreves como si fuera Yoda ('hambre tengo yo') NO - erbmah"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7fe0e059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yoda_phrase(text):\n",
+    "  string = text.split()\n",
+    "  string.reverse()\n",
+    "  newstring = ' '.join(string)\n",
+    "  return newstring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f10d1c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hambre tengo yo'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yoda_phrase(\"yo tengo hambre\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0abdb3c4",
+   "metadata": {},
+   "source": [
+    "4. Crea una funcion que reciba un string ('hola') y returne un string donde cada elemento del string este repetido tres veces ('hhhooolllaaa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f25368b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def letter_repeater(n, string):\n",
+    "    word = ''\n",
+    "    for char in list(string):\n",
+    "        word += char * n\n",
+    "    print (word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "10660886",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hhhooolllaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "letter_repeater(3,\"hola\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "959cc24b",
+   "metadata": {},
+   "source": [
+    "5. Crea una funcion que revise una lista de numeros integers/enteros ([1,0,3,0,7,6]) y retorne True si contiene la secuencia 007 en orden'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0681e7a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def review(n1,n2,n3,n4,n5):\n",
+    "    number_list = n1,n2,n3,n4,n5\n",
+    "    for num in number_list:\n",
+    "        if num == [0,0,7]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "939c703c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review(1,0,0,7,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fe4d1c47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comparison2(nombre):\n",
+    "    dos_nombres = nombre.split()\n",
+    "    #[\"diego\",\"ugalde\"]\n",
+    "    if dos_nombres[0][0].upper() == dos_nombres[1][0].upper():\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9f707c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison2(\"martha sanchez\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c2c1a2dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison2(\"diego dominguez\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "5eff05cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison2(\"diego Dominguez\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6027e6b",
+   "id": "5fa6d97b",
    "metadata": {},
    "outputs": [],
    "source": []
