--- a/Python_Functions_Exercises.ipynb
+++ b/Python_Functions_Exercises.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "2801fdba",
    "metadata": {},
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "d19b4741",
    "metadata": {},
    "outputs": [],
@@ -497,12 +497,18 @@
     "def comparison5(panes):\n",
     "    letra_inicial = panes[0][0]\n",
     "    print(letra_inicial)\n",
-    "    while letra_inicial "
+    "    index = 0\n",
+    "    while index < len(panes):\n",
+    "        if panes[index][0] == letra_inicial:\n",
+    "            index += 1\n",
+    "        else:\n",
+    "            return False\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "6280331d",
    "metadata": {},
    "outputs": [
@@ -512,6 +518,16 @@
      "text": [
       "c\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
