--- a/Python_Functions_Exercises.ipynb
+++ b/Python_Functions_Exercises.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "f25368b9",
    "metadata": {},
    "outputs": [],
@@ -241,21 +241,24 @@
     "    word = ''\n",
     "    for char in list(string):\n",
     "        word += char * n\n",
-    "    print (word)"
+    "    return (word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "10660886",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hhhooolllaaa\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'hhhooolllaaa'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -536,8 +539,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eea5148b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dddíííaaa'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letter_repeater(3,\"día\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5a057d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def letter_repeater(n, string):\n",
+    "    word = ''\n",
+    "    for char in list(string):\n",
+    "        word += char * n\n",
+    "    return (word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "31dbc6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sssseeee    ccccoooommmmpppprrrraaaa    ccccoooollllcccchhhhoooonnnneeeessss,,,,    ttttaaaammmmbbbboooorrrreeeessss,,,,    rrrreeeeffffrrrriiiiggggeeeerrrraaaaddddoooorrrreeeessss'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letter_repeater(4, \"se compra colchones, tambores, refrigeradores\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac18619d",
    "metadata": {},
    "outputs": [],
    "source": []
