--- a/Python_Functions_Exercises.ipynb
+++ b/Python_Functions_Exercises.ipynb
@@ -594,9 +594,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "913687c1",
+   "metadata": {},
+   "source": [
+    "6. Crear un funcion que revise dos números integers/enteros y retorne True si el resultado de la suma de ambos números es 20, si no que retorne False."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ad743169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def review(n1, n2):\n",
+    "    if n1 + n2 ==20:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9933fe19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review(1,19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1ecfc0bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review(10.5,9.5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac18619d",
+   "id": "e5be7db4",
    "metadata": {},
    "outputs": [],
    "source": []
