--- a/Python_Functions_Exercises.ipynb
+++ b/Python_Functions_Exercises.ipynb
@@ -681,8 +681,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "89f9d9a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def review(n1, n2):\n",
+    "    if n1 + n2 ==20:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "88263c38",
+   "id": "0f1f637d",
    "metadata": {},
    "outputs": [],
    "source": []
