--- a/holy_python_exercise.ipynb
+++ b/holy_python_exercise.ipynb
@@ -425,8 +425,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d9381d84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create an empty list on line 3 and assign its type on line 4\n",
+    "\n",
+    "gift_list= list()\n",
+    "\n",
+    "answer_1= type(gift_list)\n",
+    "\n",
+    "\n",
+    "print(answer_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6d550782",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create an empty dictionary on line 3 and assign its type on line 4\n",
+    "\n",
+    "grocery_items= dict()\n",
+    "\n",
+    "answer_2= type(grocery_items)\n",
+    "\n",
+    "\n",
+    "print(answer_2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1d0245ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create an empty tuple on line 3 and assign its type on line 4\n",
+    "\n",
+    "bucket_list= tuple()\n",
+    "\n",
+    "answer_2= type(bucket_list)\n",
+    "\n",
+    "\n",
+    "print(answer_2)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "46ec8d85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ipad', 'telefono', 'oreos']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fill in the right side of equation on line 4 so that gift_list \n",
+    "#is assigned to a list with values in it.\n",
+    "\n",
+    "gift_list= [\"ipad\", \"telefono\", \"oreos\"]\n",
+    "print(gift_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0985cc93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bananas': 8, 'leches': ['deslactosada', 'entera', 'light'], 'notas': 'tiene que estar listo antes del annio nuevo', 'comida_de_navidad': {'plato_1': 'pavo', 'plato_2': 'romeritos', 'plato_3': 'bacalao'}, 'fecha_de_navidad': '24 de diciembre'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fill in the right side of equation on line 3 so that grocery_list \n",
+    "#is assigned to a dictionary with values in it.\n",
+    "\n",
+    "grocery_list= {'bananas':8, 'leches':['deslactosada', 'entera', 'light'],\n",
+    "               'notas': 'tiene que estar listo antes del annio nuevo',\n",
+    "               'comida_de_navidad': {'plato_1':'pavo', 'plato_2':'romeritos', \n",
+    "                                     'plato_3': 'bacalao'},\n",
+    "              'fecha_de_navidad':('24 de diciembre')}\n",
+    "                                     \n",
+    "\n",
+    "\n",
+    "print(grocery_list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d70b9ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('comer chocolates', 'comer pan dulce', 'comer bananas')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fill in the right side of equation on line 3 so that bucket_list is assigned to a tuple with values in it.\n",
+    "\n",
+    "bucket_list= ('comer chocolates', 'comer pan dulce', 'comer bananas')\n",
+    "print(bucket_list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ae24311",
    "metadata": {},
    "outputs": [],
    "source": []
