--- a/holy_python_exercise.ipynb
+++ b/holy_python_exercise.ipynb
@@ -578,8 +578,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0ae24311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[11, 100, 99, 1000, 999]\n",
+    "answer_1= lst[0]\n",
+    "\n",
+    "print(answer_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bfa14b90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[11, 100, 101, 999, 1001]\n",
+    "\n",
+    "print(lst[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "76c1c2fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[11, 100, 101, 999, 1001]\n",
+    "#Type your answer here.\n",
+    "\n",
+    "answer_1= lst[-1]\n",
+    "\n",
+    "print(answer_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e33ea75d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['socks', '4K drone', 'wine', 'jam', 'pajamas']\n"
+     ]
+    }
+   ],
+   "source": [
+    "gift_list=['socks', '4K drone', 'wine', 'jam']\n",
+    "# Type your code here.\n",
+    "gift_list.append('pajamas')\n",
+    "\n",
+    "\n",
+    "print(gift_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c432431f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['socks', '4K drone', 'wine', 'jam', ['socks', 'tshirt', 'pajamas']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gift_list=['socks', '4K drone', 'wine', 'jam']\n",
+    "# Type your code here.\n",
+    "gift_list.append([\"socks\", \"tshirt\", \"pajamas\"])\n",
+    "\n",
+    "\n",
+    "print(gift_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c73493bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['socks', '4K drone', 'slippers', 'wine', 'jam']\n"
+     ]
+    }
+   ],
+   "source": [
+    "gift_list=['socks', '4K drone', 'wine', 'jam']\n",
+    "# Type your code here.\n",
+    "gift_list.insert(2,'slippers')\n",
+    "\n",
+    "\n",
+    "print(gift_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3c79cffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lst=[55, 777, 54, 6, 76, 101, 1, 2, 8679, 123, 99]\n",
+    "#  Type your code here.\n",
+    "\n",
+    "answer_1= lst.index(8679)\n",
+    "\n",
+    "print(answer_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "93e71a4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CRV', 'Outback', 'XC90', 'GL', 'Cherokee', 'Escalade', ['Navigator', 'Suburban']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[\"CRV\", \"Outback\", \"XC90\", \"GL\", \"Cherokee\", \"Escalade\"]\n",
+    "#  Type your code here.\n",
+    "lst.append([\"Navigator\", \"Suburban\"])\n",
+    "\n",
+    "\n",
+    "print(lst)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0132cdd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[55, 777, 54, 6, 76, 101, 1, 2, 8679, 123]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[55, 777, 54, 6, 76, 101, 1, 2, 8679, 123, 99]\n",
+    "#  Type your code here.\n",
+    "lst.remove(99)\n",
+    "\n",
+    "\n",
+    "print(lst)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c26d49b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99, 123, 8679, 2, 1, 101, 76, 6, 54, 777, 55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[55, 777, 54, 6, 76, 101, 1, 2, 8679, 123, 99]\n",
+    "#  Type your code here.\n",
+    "lst.reverse()\n",
+    "\n",
+    "\n",
+    "print(lst)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "126b81e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[55, 6, 777, 54, 6, 76, 101, 1, 6, 2, 6]\n",
+    "#  Type your code inside print() function.\n",
+    "\n",
+    "answer_1= lst.count(6)\n",
+    "\n",
+    "print(answer_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "905cdd8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1090\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[55, 6, 777, 54, 6, 76, 101, 1, 6, 2, 6]\n",
+    "\n",
+    "#  Type your code on line 4:\n",
+    "answer_1= sum(lst)\n",
+    "\n",
+    "print(answer_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "203cd703",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[55, 6, 777, 54, 6, 76, 101, 1, 6, 2, 6]\n",
+    "\n",
+    "#  Type your code on line 4:\n",
+    "answer_1= min(lst)\n",
+    "\n",
+    "print(answer_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f65cd096",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "777\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[55, 6, 777, 54, 6, 76, 101, 1, 6, 2, 6]\n",
+    "\n",
+    "#  Type your code on line 4:\n",
+    "answer_1= max(lst)\n",
+    "\n",
+    "print(answer_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e59acac3",
    "metadata": {},
    "outputs": [],
    "source": []
