--- a/holy_python_exercise.ipynb
+++ b/holy_python_exercise.ipynb
@@ -896,8 +896,470 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e59acac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt=(11, 100, 99, 1000, 999)\n",
+    "\n",
+    "answer_1= tt[0]\n",
+    "\n",
+    "\n",
+    "print(answer_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "96cd1f00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt=(11, 100, 101, 999, 1001)\n",
+    "\n",
+    "#Type your answer here.\n",
+    "\n",
+    "answer_1= tt[2]\n",
+    "\n",
+    "print(answer_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "59e90ee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=(11, 100, 101, 999, 1001)\n",
+    "\n",
+    "#Type your answer here.\n",
+    "\n",
+    "answer_1= lst[-2]\n",
+    "\n",
+    "print(answer_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3520e848",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "tt=(55, 777, 54, 6, 76, 101, 1, 2, 8679, 123, 99)\n",
+    "#  Type your code here.\n",
+    "\n",
+    "answer_1= tt.index(2)\n",
+    "\n",
+    "print(answer_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2f7b6df7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt=(55, 6, 777, 54, 6, 76, 7777, 1, 777, 2, 6)\n",
+    "\n",
+    "#  Type your code here.\n",
+    "\n",
+    "answer_1= tt.count(777)\n",
+    "\n",
+    "print(answer_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d57e4661",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1306\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt=(42, 1092, 11, 88, 65, 2, 6)\n",
+    "\n",
+    "#  Type your code on line 4:\n",
+    "\n",
+    "ans_1= sum(tt)\n",
+    "\n",
+    "\n",
+    "print(ans_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1f9a76a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt=(66, 555, 11, 101, 9, 1001)\n",
+    "\n",
+    "#  Type your code on line 4:\n",
+    "\n",
+    "ans_1= min(tt)\n",
+    "\n",
+    "\n",
+    "print(ans_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2e6e2a30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt=(66, 555, 11, 101, 9, 1001)\n",
+    "\n",
+    "#  Type your code on line 4:\n",
+    "\n",
+    "ans_1= max(tt)\n",
+    "\n",
+    "\n",
+    "print(ans_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fc35630d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-427\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"name\": \"Plato\", \"country\": \"Ancient Greece\", \"born\": -427, \"teacher\": \"Socrates\", \"student\": \"Aristotle\"}\n",
+    "\n",
+    "#Type your answer below.\n",
+    "answer_1= dict[\"born\"]\n",
+    "\n",
+    "print(answer_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d128fa25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-428\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"name\": \"Plato\", \"country\": \"Ancient Greece\", \"born\": -427, \"teacher\": \"Socrates\", \"student\": \"Aristotle\"}\n",
+    "\n",
+    "#Type your answer below.\n",
+    "dict[\"born\"] = -428\n",
+    "\n",
+    "print(dict[\"born\"])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6d060ab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Plato', 'country': 'Ancient Greece', 'born': -427, 'teacher': 'Socrates', 'student': 'Aristotle', 'work': ['Apology', 'Phaedo', 'Republic', 'Symposium']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"name\": \"Plato\", \"country\": \"Ancient Greece\", \"born\": -427, \"teacher\": \"Socrates\", \"student\": \"Aristotle\"}\n",
+    "\n",
+    "#Type your answer below.\n",
+    "dict[\"work\"]=[\"Apology\", \"Phaedo\", \"Republic\", \"Symposium\"]\n",
+    "\n",
+    "print(dict)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "390936cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"son's name\": 'Lucas', \"son's eyes\": 'green', \"son's height\": 34, \"son's weight\": 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"Lucas\", \"son's eyes\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Type your answer below.\n",
+    "dict[\"son's height\"]=dict[\"son's height\"]+2\n",
+    "\n",
+    "print(dict)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "16cda6e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([(\"son's name\", 'Lucas'), (\"son's eyes\", 'green'), (\"son's height\", 32), (\"son's weight\", 25)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"Lucas\", \"son's eyes\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Type your answer below.\n",
+    "ans_1= dict.items()\n",
+    "\n",
+    "print(ans_1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e4c1ec54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {\"son's name\": \"Lucas\", \"son's eye color\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Type your answer inside the print.\n",
+    "ans_1= dict.get(\"son's eye color\")\n",
+    "\n",
+    "print (ans_1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "98d9eaeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"Lucas\", \"son's eye color\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Type your answer here.\n",
+    "ans_1= dict.get(\"son's age\",2)\n",
+    "\n",
+    "print(ans_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7b5c3638",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"Lucas\", \"son's eye color\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#clear the dictionary here then print it.\n",
+    "dict.clear()\n",
+    "\n",
+    "print(dict)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b12b32df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"Lucas\", \"son's eye color\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Write your answer here.\n",
+    "ans_1=len(dict)\n",
+    "\n",
+    "print(ans_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9c006e73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son's weight\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"Lucas\", \"son's eye color\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Write your answer here.\n",
+    "ans_1=max(dict)\n",
+    "\n",
+    "print(ans_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e539d7ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son's eye color\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"son's name\": \"Lucas\", \"son's eye color\": \"green\", \"son's height\": 32, \"son's weight\": 25}\n",
+    "\n",
+    "#Write your answer here.\n",
+    "ans_1= min(dict)\n",
+    "\n",
+    "print(ans_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abccca95",
    "metadata": {},
    "outputs": [],
    "source": []
