--- a/holy_python_exercise.ipynb
+++ b/holy_python_exercise.ipynb
@@ -1358,8 +1358,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "abccca95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's always darkest before dawn.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Type your answer here.\n",
+    "\n",
+    "str=\"It's always darkest before dawn.\"\n",
+    "\n",
+    "print(str)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7d0ba333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"It's always darkest before dawn.\"\n",
+    "\n",
+    "#Type your answer here.\n",
+    "\n",
+    "ans_1= str[0]+str[1]+str[-1]\n",
+    "\n",
+    "print(ans_1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d1d487f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's always darkest before dawn!\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"It's always darkest before dawn.\"\n",
+    "\n",
+    "#Type your code here.\n",
+    "str=str.replace('.','!') \n",
+    "\n",
+    "\n",
+    "print(str)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "16c8d63d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "every strike brings me closer to the next home run.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"EVERY Strike Brings Me Closer to the Next Home run.\"\n",
+    "# Type your code here.\n",
+    "str=str.lower()\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(str)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9538bb32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DON'T STOP ME NOW.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"don't stop me now.\"\n",
+    "# Type your code here.\n",
+    "str=str.upper()\n",
+    "\n",
+    "\n",
+    "print(str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "792e156a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are no traffic jams along the extra mile.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"there are no traffic JamS Along The extra mile.\"\n",
+    "\n",
+    "#Type your answer here.\n",
+    "str=str.capitalize()\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5e7fa787",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "str=\"There are no traffic jams along the extra mile.\"\n",
+    "#  Type your code here.\n",
+    "\n",
+    "ans_1=str.startswith(\"A\")\n",
+    "\n",
+    "\n",
+    "print(ans_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b4e94130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"There are no traffic jams along the extra mile.\"\n",
+    "#  Type your code here.\n",
+    "\n",
+    "\n",
+    "ans_1=str.endswith(\".\")\n",
+    "\n",
+    "\n",
+    "print(ans_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7c6b2121",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"The best revenge is massive success.\"\n",
+    "\n",
+    "#  Type your code here.\n",
+    "\n",
+    "ans_1= str.index(\"v\")\n",
+    "\n",
+    "\n",
+    "print(ans_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b08dd68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"The best revenge is massive success.\"\n",
+    "\n",
+    "#  Type your code here.\n",
+    "\n",
+    "ans_1=str.find(\"m\")\n",
+    "\n",
+    "\n",
+    "print(ans_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1dafad2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mstr\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe best revenge is massive success.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#  Type your code here.\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m ans_1\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mX\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(ans_1)\n",
+      "\u001b[0;31mValueError\u001b[0m: substring not found"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"The best revenge is massive success.\"\n",
+    "\n",
+    "#  Type your code here.\n",
+    "\n",
+    "ans_1=str.index(\"X\")\n",
+    "\n",
+    "print(ans_1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3d85b3b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count of a is:  7  count of o is:  7\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"People often say that motivation doesn't last. Well, neither does bathing.  That's why we recommend it daily.\"\n",
+    "#  Type your code here.\n",
+    "\n",
+    "ans_1=str.count(\"a\")\n",
+    "\n",
+    "ans_2=str.count(\"o\")\n",
+    "\n",
+    "\n",
+    "print(\"count of a is: \", ans_1, \" count of o is: \", ans_2)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "18f9af6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "v_1=\"1\"\n",
+    "v_2=1\n",
+    "\n",
+    "#  Type your code on line 4:\n",
+    "\n",
+    "ans_1=type(v_1)\n",
+    "\n",
+    "ans_2=type(v_2)\n",
+    "\n",
+    "\n",
+    "print(ans_1)\n",
+    "print(ans_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c0c24476",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"1.975.000\"\n",
+    "\n",
+    "#  Type your code here:\n",
+    "\n",
+    "ans_1=len(str)\n",
+    "\n",
+    "\n",
+    "print(ans_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2b5588a",
    "metadata": {},
    "outputs": [],
    "source": []
